# template_for_fastapi

./: .dockerignore  .env.template  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
app/: __main__.py
app/config/: __init__.py  default.py  utils.py
app/db/connection/: __init__.py  session.py
app/db/migrator/: alembic.ini
app/db/migrator/versions/: 1039c2915f55_init.py
app/endpoints/: __init__.py  health_check.py
app/schemas/: __init__.py  health_check.py
app/utils/health_check/: __init__.py  health_check_db.py
tests/: conftest.py  utils.py
tests/test_endpoints/: test_health.py
